<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- SublimeDatePicker -->
    <!-- Accessibility description for the item that is currently selected. -->
    <string name="item_is_selected"><xliff:g id="item" example="2013">%1$s</xliff:g> selected</string>

    <!--
        Content description for the month and day selector in the date picker, which displays
        a selectable grid of days laid out by month.
        [CHAR LIMIT=50]
     -->
    <string name="day_picker_description">Month grid of days</string>

    <!-- Accessibility announcement for the day picker [CHAR LIMIT=NONE] -->
    <string name="select_day">Select month and day</string>

    <!--
        Content description for the year selector in the date picker, which displays
        a scrolling, vertical list of years.
        [CHAR LIMIT=50]
     -->
    <string name="year_picker_description">Year list</string>

    <!-- Accessibility announcement for the year picker [CHAR LIMIT=NONE] -->
    <string name="select_year">Select year</string>

    <!-- Preference framework strings. -->
    <string name="ok">OK</string>
    <!-- Preference framework strings. -->
    <string name="cancel">Cancel</string>

    <!-- SublimeTimePicker -->

    <!-- Accessibility announcement for hour circular picker [CHAR LIMIT=NONE] -->
    <string name="select_hours">Select hours</string>
    <!-- Accessibility announcement for minute circular picker [CHAR LIMIT=NONE] -->
    <string name="select_minutes">Select minutes</string>
    <!-- Accessibility announcement when a number that had been typed in is deleted [CHAR_LIMIT=NONE] -->
    <string name="deleted_key"><xliff:g id="key" example="4">%1$s</xliff:g> deleted</string>


    <!-- Recurrence Picker -->
    <!-- Calendar spinner item, to select that an event recurs every year. -->
    <string name="yearly_plain">Yearly</string>
    <!-- The common portion of a string describing how often an event repeats,
         example: 'Monthly (on day 2)' -->
    <string name="monthly">Monthly</string>
    <!-- A description for an event that repeats weekly on some day of the week. For example,
         'Weekly on Tuesday' or Every 2 weeks on Monday, Tuesday.  [CHAR LIMIT=25]-->
    <plurals name="weekly">
        <item quantity="one">Weekly on <xliff:g id="days_of_week">%2$s</xliff:g></item>
        <item quantity="other">Every <xliff:g id="number">%1$d</xliff:g> weeks on <xliff:g id="days_of_week">%2$s</xliff:g></item>
    </plurals>
    <!-- A label in a multiple-choice list for the specifying that an event
         repeats every weekday (Monday through Friday) -->
    <string name="every_weekday">"Every weekday (Mon\u2013Fri)"</string>
    <!-- A description for an event that repeats daily. For example, Every 2 days [CHAR LIMIT=15]-->
    <plurals name="daily">
        <item quantity="one">Daily</item>
        <item quantity="other">Every <xliff:g id="number">%d</xliff:g> days</item>
    </plurals>
    <!-- Part of a description of an repeating event. This part how many times the event repeats.
         The part before the semi-colon describes how it repeats.
         e.g. Every 2 weeks; for 15 times [CHAR LIMIT=15] -->
    <plurals name="endByCount">
        <item quantity="one">; for one time</item>
        <item quantity="other">; for <xliff:g id="number">%d</xliff:g> times</item>
    </plurals>
    <!-- Part of a description of an repeating event. This part states the date when a repeating
         event ends. The part before the semi-colon describes how it repeats.
         e.g. Every 2 weeks; until 1/1/2030 [CHAR LIMIT=21] -->
    <string name="endByDate">; until <xliff:g id="date">%s</xliff:g></string>
    <!-- Specifies that a repeating event should repeat for a certain number of iterations. [CHAR LIMIT=20]-->
    <plurals name="recurrence_end_count">
        <item quantity="one">For <xliff:g id="event_count">%d</xliff:g> event</item>
        <item quantity="other">For <xliff:g id="event_count">%d</xliff:g> events</item>
    </plurals>
    <!-- Specifies that a repeating event to repeat forever (based on the defined frequency) instead of ending at a future date[CHAR LIMIT=20] -->
    <string name="recurrence_end_continously">Forever</string>
    <!-- Specifies that a repeating event to repeat until a certain date[CHAR LIMIT=25] -->
    <string name="recurrence_end_date_label">Until a date</string>
    <!-- Specifies that a repeating event to repeat until a certain date[CHAR LIMIT=20] -->
    <string name="recurrence_end_date">Until <xliff:g id="date">%s</xliff:g></string>
    <!-- Specifies that a repeating event to repeat for a number of times. A repeating event can repeat forever, repeat in a certain frequency until a certain date, or repeat for a number of times. e.g. repeat 10 times and stop. This string is for the last case [CHAR LIMIT=25] -->
    <string name="recurrence_end_count_label">For a number of events</string>
    <!-- Strings to describe how frequently to repeat an event (e.g. every 5 days) -->
    <plurals name="recurrence_interval_daily">
        <!-- Singular form [CHAR LIMIT=30] -->
        <item quantity="one">Every <xliff:g id="count">%d</xliff:g> day</item>
        <!-- Plural form [CHAR LIMIT=30] -->
        <item quantity="other">Every <xliff:g id="count">%d</xliff:g> days</item>
    </plurals>
    <!-- Strings to describe how frequently to repeat an event (e.g. every 5 weeks) -->
    <plurals name="recurrence_interval_weekly">
        <!-- Singular form [CHAR LIMIT=30] -->
        <item quantity="one">Every <xliff:g id="count">%d</xliff:g> week</item>
        <!-- Plural form [CHAR LIMIT=30] -->
        <item quantity="other">Every <xliff:g id="count">%d</xliff:g> weeks</item>
    </plurals>
    <!-- Strings to describe how frequently to repeat an event (e.g. every 5 months) -->
    <plurals name="recurrence_interval_monthly">
        <!-- Singular form [CHAR LIMIT=30] -->
        <item quantity="one">Every <xliff:g id="count">%d</xliff:g> month</item>
        <!-- Plural form [CHAR LIMIT=30] -->
        <item quantity="other">Every <xliff:g id="count">%d</xliff:g> months</item>
    </plurals>
    <!-- Strings to describe how frequently to repeat an event (e.g. every 5 years) -->
    <plurals name="recurrence_interval_yearly">
        <!-- Singular form [CHAR LIMIT=30] -->
        <item quantity="one">Every <xliff:g id="count">%d</xliff:g> year</item>
        <!-- Plural form [CHAR LIMIT=30] -->
        <item quantity="other">Every <xliff:g id="count">%d</xliff:g> years</item>
    </plurals>
    <!-- Description of the selected marker for accessibility support [CHAR LIMIT = NONE]-->
    <string name="acessibility_recurrence_choose_end_date_description">change end date</string>
    <!-- Repeat an monthly event on the same day of every month [CHAR LIMIT=20] -->
    <string name="recurrence_month_pattern_by_day">on the same day each month</string>

    <!-- Needs translation -->

    <string name="cd_positive_component">ok, set date/time</string>
    <string name="cd_negative_component">Cancel, do not set date/time</string>

    <string name="recurrence_heading">repeat options</string>
    <string name="recurrence_does_not_repeat">does not repeat</string>
    <string name="recurrence_daily">every day</string>
    <string name="recurrence_weekly">every week</string>
    <string name="recurrence_monthly">every month</string>
    <string name="recurrence_yearly">every year</string>
    <string name="recurrence_custom">custom&#8230;</string>

    <!-- Description of the button to move to the previous month. [CHAR LIMIT=NONE] -->
    <string name="sp_date_picker_prev_month_button">Previous month</string>
    <!-- Description of the button to move to the next month. [CHAR LIMIT=NONE] -->
    <string name="sp_date_picker_next_month_button">Next month</string>

</resources>
